fixed spacing below post content and made author and post meta data display if section is set to false

--- a/resources/wp-content/themes/gigazone-gaming/sass/modules/_posts.scss
+++ b/resources/wp-content/themes/gigazone-gaming/sass/modules/_posts.scss
@@ -120,6 +120,10 @@
 
   }
 
+  &.format-standard {
+    @include margin-bottom(1);
+  }
+
   &-content {
     @include padding(0,0,0,1);
     @include margin-bottom(2);
